fix: display buttons on mobile

--- a/src/Components/Area/Area.module.scss
+++ b/src/Components/Area/Area.module.scss
@@ -18,6 +18,7 @@
 
 .buttons {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
 }
